--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,9 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.pagination {
+	text-align: center;
+	background-color: blue; 
+	font-size: 30px;
+}
+
+.pagination a {
+	color: yellow;
+}
