--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,9 +3,7 @@
 <hr>
 
 <div class="row">
-
-<% @animals.each do |animal| %>
-
+	<% @animals.each do |animal| %>
     <div class="col s12 m4">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
@@ -21,7 +19,7 @@
         </div>
       </div>
     </div>
-
-<% end %>
-
+	<% end %>
 </div>
+
+<%= will_paginate @animals %>
